--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,10 @@ dependencies = ["httpx[http2]", "msgspec"]
 [tool.uv]
 dev-dependencies = ["pyright>=1.1.0", "ruff>=0.8.0"]
 
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [tool.ruff]
 target-version = "py39"
 lint.select = [
