--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ classifiers = [
     "Typing :: Typed",
 ]
 requires-python = ">=3.9"
-dependencies = ["httpx[http2]", "msgspec"]
+dependencies = ["httpx[http2]>=0.28.0", "msgspec>=0.19.0"]
 
 [tool.uv]
 dev-dependencies = ["pyright>=1.1.0", "ruff>=0.8.0"]
