--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ requires-python = ">=3.9"
 dependencies = ["httpx[http2]>=0.28.0", "msgspec>=0.19.0"]
 
 [tool.uv]
-dev-dependencies = ["pyright>=1.1.0", "ruff>=0.8.0"]
+dev-dependencies = ["pyright>=1.1.0", "ruff>=0.9.0"]
 
 [build-system]
 requires = ["hatchling"]
@@ -62,9 +62,8 @@ lint.select = [
     "W",
 ]
 lint.ignore = [
-    "ISC001",
+    "A005",
     "PERF203",
-    "PLR2004",
     "RUF001",
     "RUF002",
     "RUF003",
@@ -72,3 +71,5 @@ lint.ignore = [
     "SLF001",
     "TRY003",
 ]
+
+lint.flake8-builtins.builtins-ignorelist = ["id", "range", "type"]
